--- a/src/components/UsefulVideos.astro
+++ b/src/components/UsefulVideos.astro
@@ -31,6 +31,7 @@ const { videoIDs: urls, searchQuery } = Astro.props
           class={twMerge(
             'relative aspect-video max-w-[75%] shrink-0 basis-[75%] rounded-xl bg-stone-50 shadow-lg',
             "after:pointer-events-none after:absolute after:inset-0 after:rounded-xl after:ring-1 after:ring-inset after:ring-black/10 after:content-['']",
+            'dark:bg-stone-900 dark:after:ring-white/10 ',
           )}
         >
           <iframe
@@ -53,14 +54,18 @@ const { videoIDs: urls, searchQuery } = Astro.props
         'flex aspect-video max-w-[75%] flex-1 shrink-0 basis-[75%] cursor-pointer flex-col items-center justify-center gap-2 rounded-xl border border-stone-300 p-4 font-medium text-stone-500 shadow-[0_1px_0_theme(colors.stone.300),0_2px_2px_0_rgb(0_0_0_/_0.05)] transition-all',
         'hover:bg-stone-50',
         'active:translate-y-[1px] active:bg-stone-50 active:shadow-none',
+        'dark:border-stone-600 dark:shadow-[0_1px_0_theme(colors.stone.600)] dark:bg-stone-900 dark:text-stone-300 dark:hover:bg-stone-800 dark:active:bg-stone-800',
       )}
     >
       Search on YouTube
       <span
-        class="flex max-w-full items-center gap-1 rounded-full bg-stone-100 py-1 pl-2 pr-3 text-sm"
+        class={twMerge(
+          'flex max-w-full items-center gap-1 rounded-full bg-stone-100 py-1 pl-2 pr-3 text-sm',
+          'dark:bg-stone-700',
+        )}
       >
         <svg
-          class="shrink-0 text-stone-400"
+          class={twMerge('shrink-0 text-stone-400', 'dark:text-stone-400')}
           width="16"
           height="16"
           viewBox="0 0 24 24"
