add UltimateGuitar links support

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -8,6 +8,9 @@ import { twMerge } from 'tailwind-merge'
 import { formatNumberWithOrdinalSuffix } from '../utils'
 import ChevronLeftIcon from '../components/icons/ChevronLeftIcon.astro'
 import MusicNoteIcon from '../components/icons/MusicNoteIcon.astro'
+import ArrowUpRightIcon from '../components/icons/ArrowUpRightIcon.astro'
+
+// TODO add UltimateGuitar urls to tabs
 
 export const getStaticPaths = (async () => {
   const tabs = await getCollection('tabs')
@@ -29,21 +32,46 @@ const { Content } = await tab.render()
   title={`${data.title} - Tino's Tabs`}
   description={`Learn how to play ${data.title} by ${data.artist}.`}
 >
-  <a
-    href="/"
-    class={twMerge(
-      '-ml-2 -mt-5 flex w-fit items-center gap-0.5 justify-self-start font-medium text-stone-500 transition-colors',
-      'hover:text-stone-700',
-      'dark:text-stone-300 dark:hover:text-stone-200',
-    )}
-  >
-    <ChevronLeftIcon class="h-6 w-6" />
-     All Tabs
-  </a>
-  <div class="mb-8 mt-6 flex flex-col items-center gap-4">
+  <div class="-mx-5 -mt-10 flex items-center justify-between px-5 pt-5">
+    <a
+      href="/"
+      class={twMerge(
+        '-ml-2 flex w-fit items-center gap-0.5 justify-self-start font-medium text-stone-500 transition-colors',
+        'hover:text-stone-700',
+        'dark:text-stone-300 dark:hover:text-stone-200',
+      )}
+    >
+      <ChevronLeftIcon class="h-6 w-6" />
+       All Tabs
+    </a>
+    {
+      data.ultimateGuitarURL && (
+        <a
+          target="_blank"
+          href={data.ultimateGuitarURL}
+          class={twMerge(
+            'group flex items-center gap-0.5 rounded-full bg-stone-100 px-3 py-1 text-xs text-stone-700 transition-colors',
+            'hover:bg-stone-200/60 hover:text-stone-900',
+            'dark:bg-stone-800 dark:text-stone-300 dark:hover:bg-stone-700 dark:hover:text-stone-100',
+          )}
+        >
+          Also available on Ultimate Guitar
+          <ArrowUpRightIcon
+            class={twMerge(
+              '-mr-1 h-4 w-4 text-stone-400 transition-colors',
+              'group-hover:text-stone-500',
+              'dark:text-stone-500 dark:group-hover:text-stone-400',
+            )}
+          />
+        </a>
+      )
+    }
+  </div>
+
+  <div class="my-8 flex flex-col items-center">
     <div
       class={twMerge(
-        'relative h-44 w-44 rounded-md bg-stone-50 shadow-2xl flex items-center justify-center',
+        'mb-4 relative h-44 w-44 rounded-md bg-stone-50 shadow-2xl flex items-center justify-center',
         "after:absolute after:inset-0 after:rounded-md after:ring-1 after:ring-inset after:ring-black/10 after:content-['']",
         'dark:bg-stone-900 dark:after:ring-white/10',
       )}
@@ -64,15 +92,13 @@ const { Content } = await tab.render()
         )
       }
     </div>
-    <div class="flex flex-col items-center">
-      <h1 class="text-2xl font-semibold">{data.title}</h1>
-      <div class={twMerge('text-stone-500', 'dark:text-stone-400')}>
-        {`${data.album} • ${data.artist}`}
-      </div>
+    <h1 class="text-2xl font-semibold leading-relaxed">{data.title}</h1>
+    <div class={twMerge('text-stone-500', 'dark:text-stone-400')}>
+      {`${data.album} • ${data.artist}`}
     </div>
     <div
       class={twMerge(
-        'flex divide-x self-stretch rounded-lg bg-stone-50 p-1.5 text-sm divide-stone-200',
+        'mt-5 mb-4 flex divide-x self-stretch rounded-lg bg-stone-50 p-1.5 text-sm divide-stone-200',
         'dark:bg-stone-900 dark:divide-stone-700',
       )}
     >
