tweak ultimate guitar link styling

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -48,8 +48,8 @@ const { Content } = await tab.render()
           target="_blank"
           href={data.ultimateGuitarURL}
           class={twMerge(
-            'group flex items-center gap-0.5 rounded-full bg-stone-100 px-3 py-1 text-xs text-stone-700 transition-colors',
-            'hover:bg-stone-200/60 hover:text-stone-900',
+            'group flex items-center gap-0.5 rounded-full bg-stone-100 px-3 py-1 text-xs font-medium text-stone-500 transition-colors',
+            'hover:bg-stone-200/60 hover:text-stone-700',
             'dark:bg-stone-800 dark:text-stone-300 dark:hover:bg-stone-700 dark:hover:text-stone-100',
           )}
         >
